# te-platform

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
te-backend/: .env  (+6 more)
te-backend/te/: .env  Dockerfile  Makefile  docker-compose.yml  prestart.sh  pyproject.toml  requirements.txt
te-backend/te/app/: main.py
te-backend/te/app/core/: config.py  gclient.json  google_drive_creds.json  security.py  service.py  settings.py
te-backend/te/app/database/: base.py  init_db.py  session.py
te-backend/te/app/ents/: api.py
te-backend/te/app/ents/application/: crud.py  dependencies.py  endpoints.py  models.py  schema.py
te-backend/te/app/ents/base/: crud_base.py
te-backend/te/app/ents/company/: __init__.py  crud.py  dependencies.py  endpoints.py  models.py  schema.py
te-backend/te/app/ents/home/: endpoints.py  models.py
te-backend/te/app/ents/learning/: crud.py  endpoints.py  models.py  schema.py
te-backend/te/app/ents/member/: __init__.py  auth.py  crud.py  dependencies.py  endpoints.py  models.py  schema.py
te-backend/te/app/ents/problem/: __init__.py  crud.py  endpoints.py  models.py  schema.py
te-backend/te/app/ents/user/: __init__.py  auth.py  crud.py  dependencies.py  endpoints.py  login.py  models.py  schema.py
te-backend/te/app/utilities/: email.py  endpoints.py  response.py  utils.py
te-backend/te/docs/: env.py
te-backend/te/docs/_build/doctrees/: environment.pickle  index.doctree
te-backend/te/docs/_build/html/: .buildinfo  search.html  searchindex.js
te-backend/te/essentials/: alembic.env.py
te-backend/te/migrations/: env.py
(+177 files in other folders)
