[tool.poetry]
name = "TechElevate"
version = "0.1.0"
description = "API for Jadaad Farms"
authors = ["CorneliusOsei2 <oseiowusuboatengcornelius6@gmail.com>"]
readme = "README.md"

[project]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
isort = "^5.12.0"
black = "^23.1.0"
SQLAlchemy = "^2.0.4"
pydantic = "^1.10.5"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
alembic = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
